<resources>
    <!-- MainActivity -->
    <string name="app_name">GFToyDroid</string>
    <string name="start_vpn">Start VPN</string>
    <string name="stop_vpn">Stop VPN</string>
    <string name="test">Test</string>

    <!-- Main Menu -->
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="packets">Packets</string>

    <!-- Packets Preferences -->
    <string name="inject_all_skins">Inject all skins</string>
    <string name="display_friend_info">Display friend info</string>
    <string name="use_private_adjutant">Use private adjutant</string>
    <string name="use_private_gun_skin">Use private gun_skin</string>
    <string name="key_use_private_adjutant">UsePrivateAdjutant</string>
    <string name="key_inject_all_skins">InjectAllSkins</string>
    <string name="key_display_friend_info">DisplayFriendInfo</string>
    <string name="key_use_private_gun_skin">UsePrivateGunSkin</string>
    <string name="etc">Etc</string>
    <string name="release_censorship">Release Censorship</string>
    <string name="key_release_censorship">ReleaseCensorship</string>
    <string name="release_censorship_summary">Build a doll with (30,30,30,30) and restart.</string>
    <string name="refresh">Refresh</string>
    <string name="logging">Logging</string>
    <string name="log_unknown_packet_data">Log unknown packet data</string>
    <string name="key_log_unknown_packet_data">LogUnknownPacketData</string>
    <string name="log_level">Log level</string>
    <string name="key_log_level">LogLevel</string>
    <string name="summary_friend_info">Dorm count, Battery count, Last visit</string>
    <string name="inject_target_info">Inject Target Info</string>
    <string name="key_inject_target_info">InjectTargetInfo</string>
</resources>