<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/packets">

        <CheckBoxPreference
            app:title="@string/inject_all_skins"
            app:key="@string/key_inject_all_skins"
            app:defaultValue="false"
            />
        <CheckBoxPreference
            app:title="@string/use_private_adjutant"
            app:key="@string/key_use_private_adjutant"
            app:defaultValue="false"
            />
        <CheckBoxPreference
            app:title="@string/use_private_gun_skin"
            app:key="@string/key_use_private_gun_skin"
            app:defaultValue="false"
            />
        <CheckBoxPreference
            app:title="@string/display_dormitory_battery"
            app:key="@string/key_display_dormitory_battery"
            app:defaultValue="false"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/logging">

        <CheckBoxPreference
            app:title="@string/log_unknown_packet_data"
            app:key="@string/key_log_unknown_packet_data"
            app:defaultValue="false"
            />

        <ListPreference
            app:title="@string/log_level"
            app:key="@string/key_log_level"
            app:entries="@array/array_log_level"
            app:entryValues="@array/array_log_level_values"
            app:defaultValue="0"
            app:summary="%s"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/etc">

        <CheckBoxPreference
            app:title="@string/release_censorship"
            app:key="@string/key_release_censorship"
            app:defaultValue="false"
            app:summary="@string/release_censorship_summary"
            />

    </PreferenceCategory>

</PreferenceScreen>