<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textViewMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1"
            android:text="Hello World!"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonStartVPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="onClick"
            android:text="@string/start_vpn"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/buttonRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="onClick"
            android:text="@string/refresh"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layout_gravity="bottom"
            android:onClick="onClick"
            android:text="@string/test" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>